Mon Dec  6 16:41:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/main.html: Update news with latest version.
	* htdig/htdig.cc(main), htdig/Document.cc(Document),
	htcommon/defaults.cc, htdoc/attrs.html, htdoc/cf_byname.html,
	htdoc/cf_byprog.html: Add authorization attribute, settable by
	htdig -u.  Also fixes PR#490, by setting authentication before
	robots.txt fetched.
	* htdoc/RELEASE.html: Update with latest fix.
	* htdoc/ChangeLog: Update to latest version.

Fri Dec  3 17:31:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.cc(Clear): Set docHopCount & docSig to 0,
	and clear docEmail, docNotification & docSubject strings to have
	a clean slate for Deserialize(), which assume 0/empty for these.
	Fixes problem with hop counts getting clobbered.
	* htdoc/RELEASE.html: Update with latest fix.
	* htdoc/ChangeLog: Update to latest version.

Fri Dec  3 12:12:19 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: removed vestiges of internal Postscript
	support that never worked, and removed test for application/msword,
	which is handled only by external parser.
	* htdig/Makefile.in: removed Postscript.o from list.
	* htdig/Retriever.cc(parse_url): Fix compilation error;
	(Initial, got_href, got_redirect): Try to get the local filename
	for a server's robots.txt file and pass it along to the newly
	generated server.
	* htdig/Server.cc(Server): Retrieve the robots.txt file from the
	filesystem when possible; fix compilation error.
	* htdig/Server.h(Server): Add local_robots_file parameter to Server().
	* htlib/HtWordType.h, htlib/HtWordType.cc: fix compilation errors.

Fri Dec  3 10:52:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(parse, do_tag): Add handling of <img alt=...> text,
	fix parsing of words in meta tags, disable indexing of meta tags
	when "noindex" state in effect, fix calculations of word positions
	to more accurately reflect relative positions.