@@ -244,7 +244,7 @@
 			This tells htdig to send the supplied
 			<em>username</em><b>:</b><em>password</em>
 			with each HTTP request.  The credentials will
-			be encoded using the \"Basic\" authentication
+			be encoded using the "Basic" authentication
 			scheme. There <em>must</em> be a colon (:)
 			between the username and password.<br>
 			This attribute can also be specified on htdig's
@@ -6281,7 +6281,6 @@
 			is mainly to make a visual distinction between matches
 			on different web sites. The results for each site could
 			thus be shown in a style matching that site.<br>
-			to.<br>
 			 The format is simply a list of pairs. The first
 			element of each pair is a pattern, the second element
 			is the name of the template file for that pattern.<br>
@@ -7192,7 +7191,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: Mon Dec  6 16:14:09 EST 1999
+Last modified: Mon Dec  6 22:36:43 EST 1999
 <!-- hhmts end -->
   </body>
 </html>
