@@ -1,3 +1,7 @@
+Mon Dec  6 22:14:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdoc/attrs.html: fixed a couple typos in new attributes.
+
 Mon Dec  6 16:41:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdoc/main.html: Update news with latest version.
